<resources>
    <string name="app_name">丝路汇</string>
    <string name="logic_title">登录</string>
    <string name="logic_phone">请输入手机号</string>
    <string name="logic_pwd">请输入密码</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="sure">确定</string>
    <string name="change_pwd">修改密码</string>
    <string name="valide">验证码</string>
    <string name="send">点击发送</string>
    <string name="setting_pwd">设置密码</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="reconfirm">再次确认密码</string>
    <string name="phone">手机号</string>
    <string name="cellphone">*手机：</string>
    <string name="another_name">别名</string>
    <string name="add_friends">加好友</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_pwd">请输入密码 </string>
    <string name="more_input_pwd">再次输入密码 </string>
    <string name="artist">艺术家资料</string>
    <string name="next">下一步</string>
    <string name="arts">美术师</string>
    <string name="technology">工艺师</string>
    <string name="designer">设计师</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="store">店铺资料</string>
    <string name="address_manager">收货地址管理</string>
    <string name="address">我的收货地址</string>
    <string name="mine">我的</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="works">作品</string>
    <string name="name">*姓名：</string>
    <string name="stage_name">艺名：</string>
    <string name="sex">*性别：</string>
    <string name="native_place">*籍贯：</string>
    <string name="information">基本信息</string>
    <string name="personal_point">个人观点</string>
    <string name="share">分享</string>
    <string name="writings_title">文章标题：%s</string>
    <string name="writings_type">文章类型：%s</string>
    <string name="works_name">作品名称：%s</string>
    <string name="works_type">作品类型：%s</string>
    <string name="add_address">新增收货地址</string>
    <string name="true_name">请输入真实姓名</string>
    <string name="date_of_birth">*出生日期:</string>
    <string name="home_pager">首页</string>
    <string name="please_select_area">请选择区域:</string>
    <string name="street_address">请输入街道地址</string>
    <string name="detailed_address">请输入详细地址</string>
    <string name="receiver_phone">请输入联系电话</string>
    <string name="receiver_name">请输入收货人姓名</string>
    <string name="zip_code">请输入邮编</string>
    <string name="save">保存</string>
    <string name="domain">所在区域</string>
    <string name="street">街道</string>
    <string name="detailedAddress">详细地址</string>
    <string name="recipient_name">收件人姓名</string>
    <string name="zipCode">邮编</string>
    <string name="delete">删除</string>
    <string name="receipt_address_management">收货地址管理</string>
    <string name="direction_for_use">使用说明</string>
    <string name="clear_cache">清除缓存</string>
    <string name="check_for_updates">检查更新</string>
    <string name="about_us">关于我们</string>
    <string name="sign_out">注销登陆</string>
    <string name="job_title">职称：</string>
    <string name="input_job_title">请输入职称</string>
    <string name="schools">流派：</string>
    <string name="input_schools">请输入流派</string>
    <string name="Apprentice">师承：</string>
    <string name="titles">头衔：</string>

    <string name="storeName">*店铺名称:</string>
    <string name="main_business">*主营业务:</string>
    <string name="traditional_Chinese_painting">国画</string>
    <string name="oil_painting">油画</string>
    <string name="handwriting">书法</string>
    <string name="Contemporary_Art">当代艺术</string>
    <string name="grave">雕刻</string>
    <string name="product">非遗产品</string>
    <string name="art_work">工艺品</string>
    <string name="date_of_establishment">*成立日期:</string>
    <string name="place_of_residence">*现居地:</string>
    <string name="contact">*联系人:</string>
    <string name="Details_address">*详细地址:</string>
    <string name="data_loading">数据加载中</string>
    <string name="contact_number">*联系电话:</string>
    <string name="artist_type">艺术家类型:</string>
    <string name="be_good_at">擅长:</string>
    <string name="be_good_at_type">*擅长类型:</string>
    <string name="types">*类型:</string>
    <string name="academic_title">职称:</string>
    <string name="sect">流派:</string>
    <string name="teachings">师承:</string>
    <string name="rank">头衔:</string>
    <string name="post_office">任职机构:</string>
    <string name="language_setting">语言设置</string>
    <string name="my_order">我的订单</string>
    <string name="apply_for_an_artist">申请艺术家</string>
    <string name="audit">审核中</string>
    <string name="not_through">未通过</string>
    <string name="open_a_shop">开通店铺</string>
    <string name="shop_home">店铺主页</string>
    <string name="store_basic_information">店铺基本信息</string>
    <string name="cooperation_opportunities">合作机会</string>
    <string name="cooperative_artist_directory">合作艺术家目录</string>
    <string name="modify_store_information">修改店铺信息</string>
    <string name="upgrade_shop">升级店铺</string>
    <string name="cooperation_process">合作进程</string>
    <string name="an_artist">艺术家邀约</string>
    <string name="artist_official_website">艺术家官网</string>
    <string name="basic_artist_information">艺术家基本信息</string>
    <string name="cooperative_store_directory">合作店铺目录</string>
    <string name="my_auction">我的拍卖</string>
    <string name="my_news">我的消息</string>
    <string name="artists">艺术家</string>
    <string name="more">更多</string>
    <string name="graduate_institutions">*毕业院校:</string>
    <string name="name_institution">请输入院校名称</string>
    <string name="junior_college">大专</string>
    <string name="regular_college_course">本科</string>
    <string name="master">硕士</string>
    <string name="learned_scholar">博士</string>
    <string name="other">其他</string>
    <string name="individual_resume">*个人简介:</string>
    <string name="brief_introduction">简介：</string>
    <string name="common_head">*常用头像:</string>
    <string name="contract_artist">签约艺术家:</string>
    <string name="not_uploaded">未上传</string>
    <string name="positive_identity_card">*身份证正面:</string>
    <string name="the_opposite_of_ID_card">*身份证反面:</string>
    <string name="submit_audit">提交审核</string>
    <string name="artist_name">艺术家名称:</string>
    <string name="type">类型:</string>
    <string name="region">地域:</string>
    <string name="ways_of_cooperation">合作方式:</string>
    <string name="mall">商城</string>
    <string name="news">新闻</string>
    <string name="auction">拍卖</string>
    <string name="The_Silk_Road_Mall">丝路商城</string>
    <string name="today_recommended">今日推荐</string>
    <string name="new_year_special">新年特惠</string>
    <string name="very_interesting">十分有趣</string>
    <string name="business_licence">*营业执照:</string>
    <string name="submit">提交</string>
    <string name="default_address">默认地址</string>
    <string name="sign_a_contract">签约</string>
    <string name="be_commissioned_to_sell_sth">代售</string>
    <string name="exhibition">展示</string>
    <string name="filter">过滤</string>
    <string name="detail">详情</string>
    <string name="request_fail">解析失败</string>
    <string name="temporarily_no_data">暂无数据</string>
    <string name="all">全部</string>
    <string name="waiting_payment">待付款</string>
    <string name="waiting_delivery">待发货</string>
    <string name="waiting_goods_receipt">待收货</string>
    <string name="waiting_evaluate">待评价</string>
    <string name="delete_order">删除订单</string>
    <string name="delivery_info">收货信息</string>
    <string name="affirm_delivery">确认收货</string>
    <string name="order_number_is">订单号：%s</string>
    <string name="count_is">数　量：%s</string>
    <string name="payment_number_is">付　款：%s</string>

    <string name="firm_order">确认订单</string>
    <string name="sale_type">作品出售类型：%s</string>
    <string name="price">价格：%s</string>
    <string name="author">作者：%s</string>
    <string name="creation_time">创作年代：%s</string>
    <string name="current_holder">目前持有人：%s</string>
    <string name="into_the_personal_official_website">进入个人官网：%s</string>
    <string name="use_scenario">使用场景：%s</string>
    <string name="buy_online">在线购买</string>
    <string name="join_a_shopping_cart">加入购物车</string>
    <string name="more_details">更多详情</string>
    <string name="product_parameters">产品参数:%s</string>
    <string name="technique">技法:%s</string>
    <string name="theme">题材:%s</string>
    <string name="property">性质:%s</string>
    <string name="material">材质:%s</string>
    <string name="buy_number">购买数量：</string>
    <string name="payment_distribution">支付配送：</string>
    <string name="invoice_information">发票信息：</string>
    <string name="return_to_worry">退换无忧：</string>
    <string name="sign_returns_within_fifteen_days_enjoy_a_payment_of_goods">
        签收十五天内退换货，可享一次赔付货</string>
    <string name="seller_message">卖家留言：</string>
    <string name="tell_me_what_you_want_to_say">告诉我你想说的...</string>
    <string name="real_payment">实付款：%s</string>
    <string name="immediate_order">立即下单</string>
    <string name="express_transportation">快递运输</string>
    <string name="working_days_weekends_and_holidays_can_delivery">工作日、双休日与节假日均可送货</string>
    <string name="no_invoice">不开发票</string>
    <string name="defaults">默认</string>
    <string name="Top_selling">热销排行</string>
    <string name="find_more">发现更多</string>
    <string name="shop_introduction">店铺介绍</string>
    <string name="recommended_works">推荐作品</string>
    <string name="current_recommendation">本期推荐</string>
    <string name="open_preface">开通前言</string>
    <string name="shouhuo">收货人：</string>
    <string name="phonenumber">联系电话：</string>
    <string name="sozaidiqu">所在地区：</string>
    <string name="jiedao">街道：</string>
    <string name="xiangxidizhi">详细地址：</string>
    <string name="shouhuoplease"> 请输入收货人地址</string>
    <string name="phonenamberplease">请输入联系电话</string>
    <string name="choice">请选择</string>
    <string name="add_new_address">添加新地址</string>
    <string name="goods_list">作品列表</string>
    <string name="carousel_advertising1">丝路汇平台是西安国家级对外文化贸易基地</string>
    <string name="carousel_advertising2">全国文化产品跨境电商综合试点项目</string>
    <string name="notice_to_be_settled_down">1.入驻须知：</string>
    <string name="Article1.1">1.1  丝路汇开放平台有权根据包括但不限于品牌需求、公司经营状况、服务水平等其他因素退回卖家申请。</string>
    <string name="Article1.2">1.2  丝路汇开放平台有权在申请入驻及后续经营阶段要求卖家提供其他资源。</string>
    <string name="Article1.3">1.3  丝路汇开放平台将结合各行业发展动态、国家相关规定及消费者购买需求，不定期更新招商标准。</string>
    <string name="Seller_notice">2.卖家必须如实提供资料和信息：</string>
    <string name="Article2.1">2.1  请务必确保申请入驻及后续经营阶段提供的相关资料和信息的真实性
        、完整性、有效性（若卖家提供的相关资质为第三方提供，请务必先核实文件的真实有效完整性），一
        旦发现虚假资质或信息的，丝路汇开放平台将不再与卖家进行合作，并有权根据丝路汇开放平台规则及
        与卖家签署的相关协议之约进行处理。</string>
    <string name="Immediately_open">立即开通</string>
    <string name="receive_messages">接收消息</string>
    <string name="my_messages">我的消息</string>
    <string name="network_request_failed">网络请求失败</string>
    <string name="storelogo">店铺logo:</string>
    <string-array name="sp_native_place">
        <item>北京</item>
        <item>陕西</item>
        <item>河南</item>
        <item>广州</item>
        <item>四川</item>
        <item>湖南</item>
        <item>黑龙江</item>
        <item>宁夏</item>
        <item>福建</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
