<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".dev.logic.RegisterActivity">

    <include layout="@layout/common_title"></include>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/valide"
            style="@style/input_style"
            android:layout_width="0dp"
            android:maxLength="11"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/text_border"
            android:hint="@string/phone"
            android:inputType="number" />

        <com.dawei.silkroad.dev.WHawkTimerBtn
            android:id="@+id/sendValide"
            android:layout_width="105dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="12dp"
            android:background="@drawable/validate_border"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:text="@string/send"
            android:textColor="@color/colorBtn"
            android:textSize="15sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_code"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_border"
        android:hint="@string/input_code"
        android:inputType="number"
        android:maxLength="6" />

    <EditText
        android:id="@+id/et_pwd1"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:background="@drawable/text_border"
        android:hint="@string/input_pwd"
        />

    <EditText
        android:id="@+id/et_pwd2"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:background="@drawable/text_border"
        android:hint="@string/more_input_pwd"
     />

    <Button
        android:id="@+id/btn_register"
        style="@style/btn_style"
        android:text="@string/register" />
</LinearLayout>
