<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_address"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dawei.silkroad.dev.address.ui.AddNewAddressActivity">

    <include layout="@layout/common_title"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shouhuo"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/add_newaddress_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shouhuoplease"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonenumber"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/add_newaddress_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phonenamberplease"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_newaddress_location_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sozaidiqu"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/add_newaddress_location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/choice"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/us_goto" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_newaddress_street_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jiedao"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/add_newaddress_street"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/choice"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/us_goto" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/xiangxidizhi"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/add_newaddress_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
