<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_pwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.dawei.silkroad.dev.logic.ChangePwdActivity">
    <include layout="@layout/common_title"></include>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/valide"
            style="@style/input_style"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/text_border"
            android:hint="@string/valide"
            android:inputType="number"
            android:maxLength="6" />

        <com.dawei.silkroad.view.WHawkTimerBtn
            android:id="@+id/sendValide"
            android:layout_width="105dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="12dp"
            android:background="@drawable/validate_border"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:text="@string/send"
            android:textColor="@color/colorBtn"
            android:textSize="15sp" />
    </LinearLayout>
    <EditText
        android:id="@+id/et_pwd1"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_border"
        android:hint="@string/setting_pwd"
        android:inputType="textPassword"
       />
    <EditText
        android:id="@+id/et_pwd2"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_border"
        android:hint="@string/reconfirm"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btn_sure"
        style="@style/btn_style"
        android:text="@string/sure"/>
</LinearLayout>
