<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/business_licence"
            android:textColor="@color/colorDarkGray"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/img_permit"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="65dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="70dp"
            android:text="@string/not_uploaded"
            android:textColor="@color/colorDarkGray"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/individual_resume"
            android:textColor="@color/colorDarkGray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_abstract"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/text_border"
            android:gravity="top"
            android:paddingTop="5dp"
            android:textColorHint="@color/colorGray" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_btn"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />
</LinearLayout>
